fix: spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ html ,body {
   padding: 0;
   list-style: none;
   align-items: flex-end;
-  height: 40px;
+  height: 50px;
 }
 
 .main-navigation ul li {
@@ -211,7 +211,7 @@ html ,body {
   .page-header .logo img {
     left: -10px;
     width: 220px;
-    top: -5px;
+    top: 0px;
   }
   .main-navigation li a span {
     display: none;
@@ -631,6 +631,12 @@ h2 {
 .hidden,
 [hidden] {
   display: none !important;
+}
+
+@media (max-width: 575px) {
+  .hidden-sm {
+    display: none!important;
+  }
 }
 
 /*
